Add Analytics, Delivery Partners, Notifications & Smart Search features
- Add LabAnalytics page with revenue trends, test distribution, and AI recommendations
- Add LabDeliveryPartners page for managing delivery staff with ratings
- Add LabNotifications page with filtered notifications and smart insights
- Add LabSmartSearch page with AI-powered search across patients, tests, and actions
- Integrate new routes into App.tsx
- Add navigation buttons to LabDashboard
- Add build optimizations to vite.config.ts
- Add npm scripts for development daemon mode

--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:daemon": "nohup vite --host 0.0.0.0 --port 8080 > vite.log 2>&1 & echo $! > .vite.pid",
+    "stop:dev": "[ -f .vite.pid ] && kill $(cat .vite.pid) && rm .vite.pid || echo 'No dev server pid found'",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "preview:static": "npm run build && (npx serve -s dist -l 8080 > preview.log 2>&1 & echo $! > .preview.pid)",
+    "stop:preview": "[ -f .preview.pid ] && kill $(cat .preview.pid) && rm .preview.pid || echo 'No preview server pid found'"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
